[package]
name = "neuromorph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.23.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.0"
futures-util = "0.3"
rand = "0.8"
